Populated the Ministry Page

--- a/templates/church/about.html
+++ b/templates/church/about.html
@@ -12,12 +12,15 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7">
             <h1 style="font-weight: 900; color: red; padding: 25px;" class=" my-1  display-4 ">ABOUT US </h1>
             <h2 style=" padding-left: 25px; padding-top: 10px;" class=" my-1 welcome_header2 display-4"> A Brief History </h2>
-            <p id="about" style=" padding: 25px; padding-top: 15px;  line-height: 2" class="para ">Abundant Life Prayer and Evangelistic Ministry also known as Pilgrim Miracle Church 1st Sunday Service was held at Miracle House, Alarere Off Old Ife road, Ibadan o the 25th of December 1989 after a week long crusade.
-               In 1990, the Lord promised to build the church a bigger place and directed the set man, Rev Ademolaami Afolayan to move the ministry location to Ososami, Ibadan while services continue at Alarere Branch. </p> 
-            <p id="about" style="padding: 25px; padding-top: 15px;  line-height: 2" class="para ">By God's grace, the foundation for the Miracle Tower Auditorium was laid in the year 1991. and was finally dedicated in the 2008.
-               Over the years, several lives have been touched, souls saved, through our evangelistic efforts in crusades and outreaches and the church has been a platform for growing believers to maturity as we remain committed to our ministerial mandate of Declaring God's Praise, Destroying Idolatry and Preaching Holiness. </p> 
-            <p  id="about" style=" padding: 25px; padding-top: 15px;  line-height: 2" class="para">Despite all the prevalent challenges in the area, Bishop Omae and a few brethren who believed in his vision steered on and today we look back and say the Indeed the Lord is Ebenezer.</p>
-        
+            <p id="about" style=" padding: 25px; padding-top: 15px;  line-height: 2; text-align:justify" class="para">Abundant Life Prayer and Evangelistic Ministry also known as Pilgrim Miracle Church 1st Sunday Service was held at Miracle House,
+               Alarere Off Old Ife road, Ibadan o the 25th of December 1989 after a week long crusade.
+               In 1990, the Lord promised to build the church a bigger place and directed the set man, 
+               Rev Ademolaami Afolayan to move the ministry location to Ososami, Ibadan while services continue at Alarere Branch. </p> 
+            <p id="about" style="padding: 25px; padding-top: 15px;  line-height: 2; text-align:justify" class="para">By God's grace, the foundation for the Miracle Tower Auditorium
+               was laid in the year 1991. and was finally dedicated in the 2008.
+               Over the years, several lives have been touched, souls saved, through our evangelistic efforts in crusades and
+              outreaches and the church has been a platform for growing believers to maturity as we remain committed to our ministerial
+              mandate of Declaring God's Praise, Destroying Idolatry and Preaching Holiness. </p> 
     </div>
 </div>
 
