--- a/templates/church/church.html
+++ b/templates/church/church.html
@@ -18,7 +18,7 @@
 
         <div class="row jumbotron">
             <div id="welcome" class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 ">
-                <img class="card-img-top" src="rgc_folder/IMG_0018-scaled.jpg" alt="founders_Image">
+                <img class="card-img-top" src="{% static 'img/image-1.jpg'%}" alt="founders_Image">
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7">
                 <h1 style="font-weight: 900; color: red; padding: 10px;" class="display-3">Worship With Us</h1>
@@ -35,14 +35,7 @@
                     <p style="font-size: 32px; padding: 10px; " class="para my-1">
                         Power Encounter 1st - 3rd of Every Month. - 5:00pm - 7:00pm</p> 
                     <p  style="font-size: 32px; padding: 10px; " class="para my-1">Miracle Night - Every Third Friday of the Month 10:00pm</p>
-                </div>
-                <div class="other-service">
-                    <h2 style=" padding-left: 15px; padding-top: 10px;" class=" my-1 welcome_header2 display-4"> HBC's </h2>
-                    <p style="font-size: 32px; padding: 25px; " class="para my-1">Get in touch with your HBC Pastor and take note of the set days agreed for fellowship. </p> 
-                    
-                </div>
-                
-            
+                </div>     
         </div>
     </div>
 
