--- a/templates/church/ministries.html
+++ b/templates/church/ministries.html
@@ -16,7 +16,7 @@
 </div>
 <div class="container-fluid">
     <div class="jumbotron " style="background-color:white; margin: auto; padding: auto;">
-        <h1 class=" text-center" style= "margin:auto; font-weight: 600; color: #ff1000;">Ministries We Support</h1>
+        <p class=" text-center" style= "margin:auto; font-weight: 600; color: #ff1000;">We bring true worship to God and communicate the mind of God to the people through the following structures, thus raising men and women unto perfection.</p>
     </div>
 </div>
 
@@ -26,8 +26,8 @@
             <div class="card">
             <img class="card-img-top" src="rgc_folder/youth-1-570x340.jpg" alt="">
             <div class="card-body">
-                <h2 class="card-title">Youth for Christ Ministry</h2>
-                <p class="card-text ministry " >Youth for Christ (YFC) is one of the Pillar Ministry at Liberty Christian Centre serving all single young people from 18 years and above.
+                <h2 class="card-title">Exousia Youths</h2>
+                <p class="card-text ministry " >Exousia Youths are the growing youths the Church, aged between 15-25 years. The PMC vision of raisng wholesome youth is expressed in the Exousia Youth Ministry. 
                 </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
             </div>
@@ -37,8 +37,8 @@
             <div class="card">
             <img class="card-img-top" src="rgc_folder/pastoral-care-1-570x340.jpg" alt="">
             <div class="card-body">
-                <h2 class="card-title">The Pastoral Care Ministry</h2>
-                <p class="card-text ministry " >The pastors at Liberty Christian Center are passionate about the call of God upon their life, are personal in their ministry to the Church and practical in the way they do things.
+                <h2 class="card-title">The Pastoral Team</h2>
+                <p class="card-text ministry " >The Pastoral Team of the Church are dedicated ministry oriented individuals who have the passion and calling to serve the Lord alongside with the General Overseer of PMC. 
                 </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
             </div>
@@ -55,8 +55,8 @@
             <div class="card">
             <img class="card-img-top" src="rgc_folder/children-570x340.jpg" alt="">
             <div class="card-body">
-                <h2 class="card-title">Children Ministry</h2>
-                <p class="card-text ministry " >The Children’s Ministry helps children to know, love and follow Jesus Christ. The team’s core assignment is to young soldiers for christ
+                <h2 class="card-title">Men of Valour</h2>
+                <p class="card-text ministry " >Men of Valor is the Married Men's Fellowship of PMC. We are focused, dynamic, result oriented and Prudent Men who provides spiritual, moral, physical and financial leadership for our homes.
                 </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
             </div>
@@ -64,10 +64,10 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 ">
             <div class="card">
-            <img class="card-img-top" src="rgc_folder/donate-570x340.jpg" alt="">
+            <img class="card-img-top" src="rgc_folder/pastoral-care-1-570x340.jpg" alt="">
             <div class="card-body">
-                <h2 class="card-title">Women of Purpose</h2>
-                <p class="card-text ministry " >Women of Purpose (WOP) Fellowship exists to provide a forum where ladies are spurred to grow in their Christian, personal, professional and family lives…
+                <h2 class="card-title">Living Stones</h2>
+                <p class="card-text ministry " >Living stones is a fellowship for singles to maximize their singleness. At living stones, singles are taught to discover and pursue their purpose, understand relationships and prepare them for an excellent Marriage. 
                 </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
             </div>
@@ -93,10 +93,10 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 ">
             <div class="card">
-            <img class="card-img-top" src="rgc_folder/volunteer-1-570x340.jpg" alt="">
+            <img class="card-img-top" src="rgc_folder/pastoral-care-1-570x340.jpg" alt="">
             <div class="card-body">
-                <h2 class="card-title">Temple of Praise (TOP)</h2>
-                <p class="card-text ministry " >The Temple of Praise (TOP) exists as associate ministers at Liberty Christian Centre and the body of Christ at large in edifying and nourishing the Church through Art.
+                <h2 class="card-title">Virtuous Women</h2>
+                <p class="card-text ministry " > Truly, the price of a virtuous woman is far above rubies, At PMC, Our Married Women are virtuous women who are continuosly and consistenly encouraged to serve the Lord, buld their homes, love and supports their husbands, and raise godly children.
                 </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
             </div>
@@ -122,10 +122,10 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 ">
             <div class="card">
-            <img class="card-img-top" src="rgc_folder/discipleship1-570x340.jpg" alt="">
+            <img class="card-img-top" src="rgc_folder/pastoral-care-1-570x340.jpg" alt="">
             <div class="card-body">
-                <h2 class="card-title">Discipleship</h2>
-                <p class="card-text ministry " >The discipleship ministry exists to ground believers in the matters of salvation, offering them spiritual and social support required for them to mature in Christian doctrine.
+                <h2 class="card-title">Children - The Junior Church</h2>
+                <p class="card-text ministry " >The Junior Church - At PMC Junior Church, we  believe our children are the continuity of the covenant God has made with us. Therefore, we give maximum attention to training our Children in the way of the Lord, instilling the fear of the Lord in their hearts, encouraging them to love the Lord with the whole of their hearts. 
                 </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
             </div>
@@ -134,7 +134,87 @@
         
     </div>
 </div>
-
+<div class="container padding">
+    <div class="row padding">
+        <div class="col-xs-12 col-sm-12 col-md-6 ">
+            <div class="card">
+            <img class="card-img-top" src="rgc_folder/sermon-top-570x340.jpg" alt="">
+            <div class="card-body">
+                <h2 class="card-title">Corper's Outreach</h2>
+                <p class="card-text ministry " >This is an outreach ministries to Corps Members serving in Oyo State especially in Ibadan. The Church provides welfare and shelter to corps members arriving from Orientation Camp until they are well establish in their Primary Place of Assignment.   
+                </p>
+                <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
+            </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 ">
+            <div class="card">
+            <img class="card-img-top" src="rgc_folder/pastoral-care-1-570x340.jpg" alt="">
+            <div class="card-body">
+                <h2 class="card-title">Community Health Outreach</h2>
+                <p class="card-text ministry " >Community Health Outreach is one of the Corporate social responsibilities of the Church in our environment. From time to time, The PMC Community Outreach Team organizes several health outreaches to the community. 
+                </p>
+                <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
+            </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+<div class="container padding">
+    <div class="row padding">
+        <div class="col-xs-12 col-sm-12 col-md-6 ">
+            <div class="card">
+            <img class="card-img-top" src="rgc_folder/sermon-top-570x340.jpg" alt="">
+            <div class="card-body">
+                <h2 class="card-title">Missions and Evangelism Outreaches</h2>
+                <p class="card-text ministry " >The PMC Mission and Evangelism Outreaches is to reach out to the unreached with the gospel of our Lord Jesus Christ. We conduct open air crusades, christian film shows, miracle rallies all in a bid to win as many as possible people to the Lord.   
+                </p>
+                <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
+            </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 ">
+            <div class="card">
+            <img class="card-img-top" src="rgc_folder/pastoral-care-1-570x340.jpg" alt="">
+            <div class="card-body">
+                <h2 class="card-title">Ministry Development Program</h2>
+                <p class="card-text ministry " >Ministry Development Program is a training programme of the Church to introduce the set standards for membership, Prepare Members for kingdom service, enlist members for discipleship 
+                </p>
+                <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
+            </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+<div class="container padding">
+    <div class="row padding">
+        <div class="col-xs-12 col-sm-12 col-md-6 ">
+            <div class="card">
+            <img class="card-img-top" src="rgc_folder/sermon-top-570x340.jpg" alt="">
+            <div class="card-body">
+                <h2 class="card-title">Discipleship Training</h2>
+                <p class="card-text ministry " >The is a process of turning believers into disciples. It is aimed at maturing believers to understand the sound biblical principles.    
+                </p>
+                <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
+            </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 ">
+            <div class="card">
+            <img class="card-img-top" src="rgc_folder/pastoral-care-1-570x340.jpg" alt="">
+            <div class="card-body">
+                <h2 class="card-title">Pilgrim Miracle Bible Institute</h2>
+                <p class="card-text ministry " >This is a non denominational Bible Training Institute that men and women who desire to know more of God and how they can be effective Ministers of Christ.
+                </p>
+                <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
+            </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
 
 
 
