Added Styling for Contact Page

--- a/templates/church/index.html
+++ b/templates/church/index.html
@@ -71,7 +71,8 @@
             <img class="card-img-top" src="{% static 'img/image-2.jpg' %}" alt="">
             <div class="card-body">
                 <h3 class="card-title">Our Church Ministries</h3>
-                <p class="card-text "> Liberty Christian Centre is split into various Ministerial departments which together form the church structure…</p>
+                <p class="card-text "> We bring true worship to God and communicate the mind of God to the people through the following structures, thus raising men and women unto perfection. 
+                </p>
                 <a href="{% url 'ministries'%}" class="btn btn-outline-secondary">READ MORE</a>
             </div>
             </div>
@@ -81,7 +82,7 @@
             <img class="card-img-top" src="{% static 'img/image-3.jpg' %}" alt="">
             <div class="card-body">
                 <h3 class="card-title">Join a Church Group</h3>
-                <p class="card-text "> At The Redeemed Gospel Church (RGC-LCC), our prayer for you is that the God of all grace anoints you with…</p>
+                <p class="card-text" style="text-align: justify"> At PMC, we believe you can wholeheartedly love God, learn His principles and be a part of a group where your gifting can have maximum expression thereby contributing immensely to the growth of the church through the activities of these Ministries</p>
             <a href="{% url 'ministries' %}" class="btn btn-outline-secondary">READ MORE</a>
             </div>
             </div>
@@ -91,7 +92,8 @@
             <img class="card-img-top" src="{% static 'img/image-4.jpg' %}" alt="">
             <div class="card-body">
                 <h3 class="card-title">About Our Church</h3>
-                <p class="card-text "> Liberty Christian Centre was officially launched in 1999. The Senior Pastor; Bishop Dr. Kepha Omae took a bold…</p>
+                <p class="card-text" style="text-align: justify">Abundant Life Prayer and Evangelistic Ministry also known as Pilgrim Miracle Church 1st Sunday Service was held at Miracle House...
+                    </p>
                 <a href="{% url 'about' %}" class="btn btn-outline-secondary">READ MORE</a>
             </div>
             </div>
