Added to the welcome address

--- a/templates/church/index.html
+++ b/templates/church/index.html
@@ -56,6 +56,16 @@
             <p class="para" style="text-align:justify">Join with us as we ‘Declare God’s Praise’. No one else deserves to be praised. When we celebrate the Praise of God in the congregation of God’s people, the end result is God releases His glory among His people, and this Glory, God will share with no other person. God Himself declares: ‘I AM the Lord: that is My Name: and My Glory will I not give to another, neither My Praise to graven images’ (Isaiah 42:8 KJV).</p>
             <p class="para" style="text-align:justify">You are welcome to join us, to ‘Destroy Idolatry’. God hates idolatry in all its forms. He Himself commanded the children of Israel: “Be careful not to make a treaty with the inhabitants of the land you are entering, lest they become a snare in your midst. Rather, you must tear down their altars, smash their sacred stones, and chop down their Asherah poles” (Exo. 34:12-13. NIV).</p>
             <p class="para" style="text-align:justify">In concluding the writing on the manifestation of the gifts of the Spirit during church service, the Apostle Paul concludes with the statement “Let all things be done decently and in order” (1 Corin. 14:40 KJV). “Set My people in order” comes from the expected manner of comportment of church peoplein relation with being orderly before the Person of the Holy Spirit. It is the same Holy Spirit, who will work on men to make them to take after Christ, the ‘Perfect Man’.</p>
+            <p class="para" style="text-align: justify">When Holiness, the Praise of God, the Destruction of Idolatry and Orderliness in God’s People constitute the main emphasis of a church and the Bible is preached under the unction of the Holy Spirit, it is sure that the Light of God’s Kingdom will fill the Church and its people. This is what members, friends and partners of our ministry enjoy in the work of God in our midst. These books tell the kind of people we are, the message we preach and the power of God that keeps us going. 
+
+                Solomon had this to say “My son, eat honey because it is good, and the honeycomb which is sweet to your taste” (Proverbs 24:13).When you visit this website, you will find the Word of God that is sweet to your taste just like honeycomb.
+                
+                God bless you.
+                Rev Ademolaami Adeniyi Afolayan
+                The General Overseer 
+                and 
+                Rev Prof. Mrs. Adejumoke Alice Afolayan 
+                The Vice President</p>
             
 
         
