Added changes to the welcome Address in index template

--- a/templates/church/index.html
+++ b/templates/church/index.html
@@ -61,11 +61,13 @@
                 Solomon had this to say “My son, eat honey because it is good, and the honeycomb which is sweet to your taste” (Proverbs 24:13).When you visit this website, you will find the Word of God that is sweet to your taste just like honeycomb.
                 
                 God bless you.
-                Rev Ademolaami Adeniyi Afolayan
-                The General Overseer 
-                and 
-                Rev Prof. Mrs. Adejumoke Alice Afolayan 
-                The Vice President</p>
+
+              </p>
+            <p class="para" style="text-align: justify"><strong>Rev Ademolaami Adeniyi Afolayan</strong> </p>
+            <p class="para" style="text-align: justify"><span>The General Overseer</span></p>
+            <p class="para" style="text-align: justify"><span> and</span></p>
+            <p class="para" style="text-align: justify"><strong> Prof Mrs Adejumoke Alice Afolayan</strong></p>
+            <p class="para" sty;e="text-align:justify"><Span> The Vice President</Span></p>
             
 
         
