Made changes to the ministries page

--- a/templates/church/ministries.html
+++ b/templates/church/ministries.html
@@ -84,8 +84,8 @@
             <div class="card">
             <img class="card-img-top" src="rgc_folder/strong-men-570x340.jpg" alt="">
             <div class="card-body">
-                <h2 class="card-title">Promise Keepers</h2>
-                <p class="card-text ministry " >The Promise Keepers – Men’s Ministry at Liberty Christian Centre inspires and equips men to know the Word, teach it, and faithfully follow Christ as husbands, fathers, and friends.
+                <h2 class="card-title">The Pastoral Team</h2>
+                <p class="card-text ministry " >The Pastoral Team of the Church are dedicated ministry oriented individuals who have the passion and calling to serve the Lord alongside with the General Overseer of PMC.
                 </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg">READ MORE</a>
             </div>
